# cpp-package-template

./: .clang-format  .gitattributes  Doxyfile  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yaml
docs/: annotated.html  classclazz-members.html  classclazz.html  classes.html  clazz_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html
docs/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
include/: clazz.hpp  meson.build
src/: main.cpp  meson.build
tests/: meson.build  test.cpp
